--- a/MBlogApp/MBlogApp/App.xaml
+++ b/MBlogApp/MBlogApp/App.xaml
@@ -11,6 +11,7 @@
             <Color x:Key="P_RedColor">Red</Color>
             <Color x:Key="P_PimaryMainColor">#1A6B69</Color>
             <Color x:Key="P_WhiteColor">#FFFFFF</Color>
+            <Color x:Key="P_EntryTextColor">Black</Color>
             <Style TargetType="Frame" >
                 <Setter Property="Margin" Value="40,2" />
                 <Setter Property="HasShadow" Value="False" />
