--- a/MBlogApp/MBlogApp/Views/ForgotPasswordPage.xaml
+++ b/MBlogApp/MBlogApp/Views/ForgotPasswordPage.xaml
@@ -42,6 +42,7 @@
                 <Label 
                      x:Name="LbErrorMessage"
                     TextColor="{StaticResource P_RedColor}"
+                    FontAttributes="None"
                    Margin="40,0"
                      Text="{Binding ErrorMessage}"
                    IsVisible="{Binding Source={x:Reference LbErrorMessage},
@@ -58,6 +59,7 @@
                              HeightRequest="65"
                             Focused="EntryEmail_Focused"
                             Unfocused="EntryEmail_Unfocused"
+                            TextColor="{StaticResource P_EntryTextColor}"
                             />
                     </StackLayout>
                 </Frame>
