--- a/MBlogApp/MBlogApp/Views/LogInPage.xaml
+++ b/MBlogApp/MBlogApp/Views/LogInPage.xaml
@@ -35,6 +35,7 @@
                    />
                 <Label 
                     x:Name="LbErrorMessage"
+                    FontAttributes="None"
                    TextColor="{StaticResource P_RedColor}"
                    Margin="40,0"
                    WidthRequest="250"
@@ -51,7 +52,7 @@
                             ReturnType="Next"
                            Focused="EntryEmail_Focused"
                            Unfocused="EntryEmail_Unfocused"
-                           
+                           TextColor="{StaticResource P_EntryTextColor}"
                            Text="{Binding LogInModel.Email}"
                             />
                 </StackLayout>
@@ -67,6 +68,7 @@
                         <Entry  x:Name="EntryPassword" IsPassword="True"
                              Margin="10,0"
                                 Text="{Binding LogInModel.PassWord}"
+                                TextColor="{StaticResource P_EntryTextColor}"
                             ReturnType="Done"
                                 Focused="EntryPassword_Focused"
                                 Unfocused="EntryPassword_Unfocused"
