--- a/MBlogApp/MBlogApp/App.xaml
+++ b/MBlogApp/MBlogApp/App.xaml
@@ -17,7 +17,8 @@
                 <Setter Property="HasShadow" Value="False" />
                 <Setter Property="BorderColor" Value="Gray" />
                 <Setter Property="Padding" Value="0" />
-
+                <Setter Property="CornerRadius" Value="0"/>
+                
             </Style>
             <Style TargetType="Button">
                 <Setter Property="Margin" Value="40,0"/>
@@ -26,10 +27,11 @@
                 <Setter Property="FontSize" Value="24"/>
                 <Setter Property="IsEnabled" Value="False"/>
                 <Setter Property="FontAttributes" Value="Bold"/>
+                <Setter Property="CornerRadius" Value="0" />
 
             </Style>
             <Style TargetType="Label" >
-                <Setter Property="FontAttributes" Value="Bold"/>
+                <!--<Setter Property="FontAttributes" Value="Bold"/>-->
                 <Setter Property="TextColor" Value="{StaticResource P_PimaryMainColor}"/>
                 <Setter Property="FontSize" Value="18"/>
                 <!--<Setter Property="Margin" Value="20,10" />-->
